fix: logos margin-top 25px on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -643,7 +643,7 @@ body {
 
 @media (max-width: 767px) {
   .logos {
-    margin-top: 30px;
+    margin-top: 25px;
   }
   .logos__img--ironclad  { width: 167px; height: 20px; }
   .logos__img--maxout    { width: 83px;  height: 52px; }
